--- a/bot.html
+++ b/bot.html
@@ -1,148 +1,214 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 <head>
   <meta charset="UTF-8">
-  <title>AI Copilot</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Dark Vibe AI Copilot</title>
   <style>
-    body {
+    /* Reset */
+    * { box-sizing: border-box; margin: 0; padding: 0; }
+
+    html, body {
+      height: 100%;
+      background: #121217;
+      color: #e4e6eb;
       font-family: 'Segoe UI', sans-serif;
-      background-color: #f4f6f8;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      flex-direction: column;
-      height: 100vh;
     }
 
+    /* Container */
     .chat-container {
-      flex: 1;
       display: flex;
       flex-direction: column;
+      height: 100%;
       max-width: 600px;
       margin: auto;
-      padding: 20px;
-      box-sizing: border-box;
+      background: #1a1a23;
+      border-radius: 12px;
+      overflow: hidden;
+      box-shadow: 0 8px 24px rgba(0,0,0,0.6);
     }
 
-    .messages {
+    /* Header */
+    .chat-header {
+      background: linear-gradient(90deg, #3a3a4a, #2a2a35);
+      padding: 16px;
+      text-align: center;
+      font-size: 1.25rem;
+      font-weight: 600;
+      border-bottom: 1px solid #2a2a35;
+    }
+
+    /* Messages */
+    .chat-messages {
       flex: 1;
-      background: #fff;
-      border-radius: 10px;
-      padding: 20px;
+      padding: 16px;
       overflow-y: auto;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.05);
-      margin-bottom: 10px;
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
     }
 
     .message {
-      margin: 10px 0;
-      max-width: 80%;
-      line-height: 1.5;
-      padding: 10px 14px;
-      border-radius: 12px;
-    }
-
-    .user {
-      background-color: #d0e7ff;
-      align-self: flex-end;
-      border-bottom-right-radius: 0;
-    }
-
-    .bot {
-      background-color: #e2e2e2;
-      align-self: flex-start;
-      border-bottom-left-radius: 0;
-    }
-
-    .input-area {
       display: flex;
-      gap: 10px;
+      align-items: flex-end;
+      animation: fadeIn 0.2s ease-out;
+    }
+    .message.user { flex-direction: row-reverse; }
+
+    .avatar {
+      width: 40px; height: 40px;
+      border-radius: 50%;
+      background: #2a2a35;
+      display: flex; align-items: center; justify-content: center;
+      font-weight: bold; color: #8b8d98;
+      margin: 0 8px;
+      flex-shrink: 0;
     }
 
-    textarea {
+    .bubble {
+      max-width: 75%;
+      padding: 12px 16px;
+      border-radius: 16px;
+      position: relative;
+      line-height: 1.4;
+      background: #2a2a35;
+      box-shadow:
+        inset 0 0 2px rgba(0,0,0,0.5),
+        0 2px 6px rgba(0,0,0,0.4);
+      word-break: break-word;
+      transition: background 0.2s;
+    }
+    .message.user .bubble { background: #33333d; }
+
+    .bubble:hover {
+      background: #383843;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(8px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    /* Input */
+    .chat-input {
+      display: flex;
+      padding: 12px 16px;
+      border-top: 1px solid #2a2a35;
+      background: #1a1a23;
+    }
+    .chat-input textarea {
       flex: 1;
-      padding: 10px;
-      border-radius: 8px;
-      border: 1px solid #ccc;
-      resize: none;
-      height: 60px;
-      font-size: 14px;
-    }
-
-    button {
-      background-color: #007bff;
-      color: white;
+      padding: 12px;
       border: none;
-      padding: 10px 16px;
-      border-radius: 8px;
+      border-radius: 12px;
+      background: #2a2a35;
+      color: #e4e6eb;
+      font-size: 1rem;
+      resize: none;
+      line-height: 1.4;
+    }
+    .chat-input textarea:focus {
+      outline: 2px solid #4a90e2;
+      background: #33333d;
+    }
+    .chat-input button {
+      margin-left: 12px;
+      padding: 12px 20px;
+      border: none;
+      border-radius: 12px;
+      background: #4a90e2;
+      color: #fff;
+      font-size: 1rem;
       cursor: pointer;
-      font-size: 14px;
+      transition: background 0.2s;
+    }
+    .chat-input button:hover {
+      background: #3b78c2;
     }
 
-    button:hover {
-      background-color: #0056b3;
-    }
-
-    .loading {
-      font-style: italic;
-      color: #888;
+    /* Responsive */
+    @media (max-width: 600px) {
+      .chat-container { border-radius: 0; height: 100vh; }
+      .avatar { width: 32px; height: 32px; font-size: 0.85rem; }
+      .bubble { padding: 10px 14px; }
+      .chat-input { flex-direction: column; }
+      .chat-input button { margin: 12px 0 0; width: 100%; }
     }
   </style>
 </head>
 <body>
-  <div class="chat-container">
-    <div class="messages" id="messages"></div>
 
-    <div class="input-area">
-      <textarea id="userInput" placeholder="Ask me anything..."></textarea>
-      <button onclick="sendRequest()">Send</button>
+  <div class="chat-container">
+    <div class="chat-header">Dark Vibe AI Copilot</div>
+    <div class="chat-messages" id="chatMessages">
+      <!-- chat bubbles injected here -->
+    </div>
+    <div class="chat-input">
+      <textarea id="userInput" rows="1" placeholder="Type a message…"></textarea>
+      <button onclick="sendMessage()">Send</button>
     </div>
   </div>
 
   <script>
-    function addMessage(text, sender) {
-      const msgEl = document.createElement('div');
-      msgEl.className = 'message ' + sender;
-      msgEl.textContent = text;
-      document.getElementById('messages').appendChild(msgEl);
-      msgEl.scrollIntoView({ behavior: 'smooth' });
+    const chatMessages = document.getElementById('chatMessages');
+    const userInput = document.getElementById('userInput');
+
+    function appendMessage(text, sender) {
+      const wrapper = document.createElement('div');
+      wrapper.className = 'message ' + sender;
+
+      const avatar = document.createElement('div');
+      avatar.className = 'avatar';
+      avatar.textContent = sender === 'user' ? 'U' : 'AI';
+
+      const bubble = document.createElement('div');
+      bubble.className = 'bubble';
+      bubble.textContent = text;
+
+      wrapper.append(avatar, bubble);
+      chatMessages.appendChild(wrapper);
+      chatMessages.scrollTop = chatMessages.scrollHeight;
     }
 
-    function sendRequest() {
-      const input = document.getElementById('userInput');
-      const userText = input.value.trim();
-      if (!userText) return;
+    function sendMessage() {
+      const text = userInput.value.trim();
+      if (!text) return;
+      appendMessage(text, 'user');
+      userInput.value = '';
 
-      addMessage(userText, 'user');
-      input.value = '';
-
-      const loadingEl = document.createElement('div');
-      loadingEl.className = 'message bot loading';
-      loadingEl.textContent = 'Typing...';
-      document.getElementById('messages').appendChild(loadingEl);
-      loadingEl.scrollIntoView({ behavior: 'smooth' });
+      const typingEl = document.createElement('div');
+      typingEl.className = 'message bot';
+      typingEl.innerHTML = '<div class="avatar">AI</div><div class="bubble">Typing…</div>';
+      chatMessages.appendChild(typingEl);
+      chatMessages.scrollTop = chatMessages.scrollHeight;
 
       fetch('https://ai-api-al6k.onrender.com/ask', {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ text: userText })
+        body: JSON.stringify({ text })
       })
-      .then(response => response.json())
+      .then(res => res.json())
       .then(data => {
-        document.getElementById('messages').removeChild(loadingEl);
-
+        chatMessages.removeChild(typingEl);
         const fullText = (data.responses || [])
-          .filter(entry => entry.event === "appendText" && entry.text)
-          .map(entry => entry.text)
-          .join('');
-
-        addMessage(fullText || '[No response]', 'bot');
+          .filter(e => e.event === 'appendText' && e.text)
+          .map(e => e.text).join('');
+        appendMessage(fullText || '[No response]', 'bot');
       })
-      .catch(error => {
-        document.getElementById('messages').removeChild(loadingEl);
-        addMessage('Error: ' + error.message, 'bot');
+      .catch(err => {
+        chatMessages.removeChild(typingEl);
+        appendMessage('Error: ' + err.message, 'bot');
       });
     }
+
+    // send on Enter
+    userInput.addEventListener('keydown', e => {
+      if (e.key === 'Enter' && !e.shiftKey) {
+        e.preventDefault();
+        sendMessage();
+      }
+    });
   </script>
+
 </body>
 </html>
