--- a/bot.html
+++ b/bot.html
@@ -5,30 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Dark Vibe AI Copilot</title>
   <style>
-    /* Reset */
     * { box-sizing: border-box; margin: 0; padding: 0; }
-
     html, body {
       height: 100%;
       background: #121217;
       color: #e4e6eb;
       font-family: 'Segoe UI', sans-serif;
     }
-
-    /* Container */
     .chat-container {
       display: flex;
       flex-direction: column;
-      height: 100%;
+      width: 100%;
       max-width: 600px;
       margin: auto;
       background: #1a1a23;
       border-radius: 12px;
       overflow: hidden;
       box-shadow: 0 8px 24px rgba(0,0,0,0.6);
+      /* we'll set height via JS */
     }
-
-    /* Header */
     .chat-header {
       background: linear-gradient(90deg, #3a3a4a, #2a2a35);
       padding: 16px;
@@ -37,8 +32,6 @@
       font-weight: 600;
       border-bottom: 1px solid #2a2a35;
     }
-
-    /* Messages */
     .chat-messages {
       flex: 1;
       padding: 16px;
@@ -47,14 +40,8 @@
       flex-direction: column;
       gap: 12px;
     }
-
-    .message {
-      display: flex;
-      align-items: flex-end;
-      animation: fadeIn 0.2s ease-out;
-    }
+    .message { display: flex; align-items: flex-end; animation: fadeIn 0.2s ease-out; }
     .message.user { flex-direction: row-reverse; }
-
     .avatar {
       width: 40px; height: 40px;
       border-radius: 50%;
@@ -64,32 +51,21 @@
       margin: 0 8px;
       flex-shrink: 0;
     }
-
     .bubble {
       max-width: 75%;
       padding: 12px 16px;
       border-radius: 16px;
-      position: relative;
-      line-height: 1.4;
       background: #2a2a35;
-      box-shadow:
-        inset 0 0 2px rgba(0,0,0,0.5),
-        0 2px 6px rgba(0,0,0,0.4);
+      box-shadow: inset 0 0 2px rgba(0,0,0,0.5), 0 2px 6px rgba(0,0,0,0.4);
       word-break: break-word;
       transition: background 0.2s;
     }
     .message.user .bubble { background: #33333d; }
-
-    .bubble:hover {
-      background: #383843;
-    }
-
+    .bubble:hover { background: #383843; }
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(8px); }
       to { opacity: 1; transform: translateY(0); }
     }
-
-    /* Input */
     .chat-input {
       display: flex;
       padding: 12px 16px;
@@ -122,13 +98,9 @@
       cursor: pointer;
       transition: background 0.2s;
     }
-    .chat-input button:hover {
-      background: #3b78c2;
-    }
-
-    /* Responsive */
+    .chat-input button:hover { background: #3b78c2; }
     @media (max-width: 600px) {
-      .chat-container { border-radius: 0; height: 100vh; }
+      .chat-container { border-radius: 0; }
       .avatar { width: 32px; height: 32px; font-size: 0.85rem; }
       .bubble { padding: 10px 14px; }
       .chat-input { flex-direction: column; }
@@ -137,12 +109,9 @@
   </style>
 </head>
 <body>
-
-  <div class="chat-container">
+  <div class="chat-container" id="chatContainer">
     <div class="chat-header">Dark Vibe AI Copilot</div>
-    <div class="chat-messages" id="chatMessages">
-      <!-- chat bubbles injected here -->
-    </div>
+    <div class="chat-messages" id="chatMessages"></div>
     <div class="chat-input">
       <textarea id="userInput" rows="1" placeholder="Type a message…"></textarea>
       <button onclick="sendMessage()">Send</button>
@@ -150,21 +119,26 @@
   </div>
 
   <script>
+    const container = document.getElementById('chatContainer');
     const chatMessages = document.getElementById('chatMessages');
     const userInput = document.getElementById('userInput');
+
+    // On load and on any resize (including keyboard open), adjust container height
+    function adjustHeight() {
+      container.style.height = window.innerHeight + 'px';
+    }
+    window.addEventListener('load', adjustHeight);
+    window.addEventListener('resize', adjustHeight);
 
     function appendMessage(text, sender) {
       const wrapper = document.createElement('div');
       wrapper.className = 'message ' + sender;
-
       const avatar = document.createElement('div');
       avatar.className = 'avatar';
       avatar.textContent = sender === 'user' ? 'U' : 'AI';
-
       const bubble = document.createElement('div');
       bubble.className = 'bubble';
       bubble.textContent = text;
-
       wrapper.append(avatar, bubble);
       chatMessages.appendChild(wrapper);
       chatMessages.scrollTop = chatMessages.scrollHeight;
@@ -175,7 +149,6 @@
       if (!text) return;
       appendMessage(text, 'user');
       userInput.value = '';
-
       const typingEl = document.createElement('div');
       typingEl.className = 'message bot';
       typingEl.innerHTML = '<div class="avatar">AI</div><div class="bubble">Typing…</div>';
@@ -190,18 +163,17 @@
       .then(res => res.json())
       .then(data => {
         chatMessages.removeChild(typingEl);
-        const fullText = (data.responses || [])
-          .filter(e => e.event === 'appendText' && e.text)
-          .map(e => e.text).join('');
-        appendMessage(fullText || '[No response]', 'bot');
+        const full = (data.responses||[])
+          .filter(e=>e.event==='appendText'&&e.text)
+          .map(e=>e.text).join('');
+        appendMessage(full||'[No response]', 'bot');
       })
       .catch(err => {
         chatMessages.removeChild(typingEl);
-        appendMessage('Error: ' + err.message, 'bot');
+        appendMessage('Error: '+err.message, 'bot');
       });
     }
 
-    // send on Enter
     userInput.addEventListener('keydown', e => {
       if (e.key === 'Enter' && !e.shiftKey) {
         e.preventDefault();
@@ -209,6 +181,5 @@
       }
     });
   </script>
-
 </body>
 </html>
