--- a/maker.html
+++ b/maker.html
@@ -183,6 +183,26 @@
              <div id="errorDisplay"></div>
         </div>
 
+        <div class="controls-panel">
+            <h2 class="panel-title">Stacked Bar Chart with Labels Inside Bars</h2>
+
+            <!-- Graph Title -->
+            <div class="control-group">
+                <label for="stackedBarTitle">Graph Title:</label>
+                <input type="text" id="stackedBarTitle" placeholder="Enter graph title" value="Stacked Bar Chart Example">
+            </div>
+
+            <!-- Add Graph Button -->
+            <div class="control-group">
+                <button id="addStackedBarChartBtn">Add Stacked Bar Chart</button>
+            </div>
+
+            <!-- Graph Container -->
+            <div class="relative w-full h-[600px] sm:h-[700px] mt-4">
+                <canvas id="stackedBarChartCanvas"></canvas>
+            </div>
+        </div>
+
         <div class="chart-area-wrapper">
             <div id="chartContainerWrapper">
                 <canvas id="myChartCanvas"></canvas>
@@ -646,7 +666,106 @@
             }
         });
 
+        // Function to parse CSV data and create a grouped stacked bar chart
+        document.getElementById('addStackedBarChartBtn').addEventListener('click', () => {
+            const csvData = document.getElementById('csvDataInput').value.trim();
+            if (!csvData) {
+                alert('Please provide CSV data to create the chart.');
+                return;
+            }
 
+            // Parse the CSV data
+            const lines = csvData.split('\n');
+            const headers = lines[0].split(',').map(header => header.trim());
+            const countries = headers.slice(1); // Country names (e.g., USA, Bangladesh)
+            const activities = [];
+            const datasets = countries.map((country, index) => ({
+                label: country,
+                data: [],
+                backgroundColor: `rgba(${54 + index * 50}, ${162 - index * 30}, ${235 - index * 40}, 0.8)`,
+            }));
+
+            for (let i = 1; i < lines.length; i++) {
+                const values = lines[i].split(',').map(value => value.trim());
+                activities.push(values[0]); // First column is the activity
+                for (let j = 1; j < values.length; j++) {
+                    datasets[j - 1].data.push(parseFloat(values[j]) || 0); // Parse numeric values
+                }
+            }
+
+            // Chart configuration
+            const ctx = document.getElementById('stackedBarChartCanvas').getContext('2d');
+            new Chart(ctx, {
+                type: 'bar',
+                data: {
+                    labels: countries, // Countries as the X-axis labels
+                    datasets: activities.map((activity, activityIndex) => ({
+                        label: activity,
+                        data: datasets.map(dataset => dataset.data[activityIndex]),
+                        backgroundColor: `rgba(${54 + activityIndex * 50}, ${162 - activityIndex * 30}, ${235 - activityIndex * 40}, 0.8)`,
+                    })),
+                },
+                options: {
+                    plugins: {
+                        title: {
+                            display: true,
+                            text: document.getElementById('stackedBarTitle').value || 'Grouped Stacked Bar Chart',
+                            font: { size: 16 },
+                            padding: { top: 10, bottom: 20 },
+                        },
+                        legend: {
+                            position: 'top',
+                            labels: {
+                                font: { size: 14 },
+                                boxWidth: 24,
+                                padding: 15,
+                            },
+                        },
+                        tooltip: {
+                            callbacks: {
+                                label: function (context) {
+                                    const value = context.raw;
+                                    return `${context.dataset.label}: ${value}`;
+                                },
+                            },
+                        },
+                    },
+                    responsive: true,
+                    maintainAspectRatio: false,
+                    scales: {
+                        x: {
+                            stacked: true,
+                            title: {
+                                display: true,
+                                text: 'Countries',
+                                font: { size: 16 },
+                                padding: { top: 10 },
+                            },
+                            ticks: {
+                                font: { size: 14 },
+                            },
+                        },
+                        y: {
+                            stacked: true,
+                            title: {
+                                display: true,
+                                text: 'Values',
+                                font: { size: 16 },
+                                padding: { bottom: 10 },
+                            },
+                            ticks: {
+                                font: { size: 14 },
+                                callback: value => value.toLocaleString(),
+                            },
+                        },
+                    },
+                    animation: {
+                        duration: 1000,
+                        easing: 'easeOutQuart',
+                    },
+                },
+            });
+        });
     </script>
 </body>
 </html>
